# TerrainGenerator

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  cube.h  glad_loader.h  glfw_manager.h  shader.h  terrain.h  texture.h  texture_manager.h
include/glad/: glad.h
shaders/: terrain_height.fs  terrain_height.vs  test.fs  test.vs  texture.fs  texture.vs
src/: camera.cpp  cube.cpp  glad.c  glad_loader.cpp  glfw_manager.cpp  main.cpp  renderer.cpp  terrain.cpp  texture.cpp  texture_manager.cpp
